--- a/.github/workflows/frontend-ci-cd.yaml
+++ b/.github/workflows/frontend-ci-cd.yaml
@@ -38,19 +38,26 @@ jobs:
         run: npm install  # Install dependencies using npm
       - name: Test and coverage
         run: npm run test -- --coverage  # Run tests with Vitest and generate coverage
+      - name: Check for f lcov.info
+        run: ls -la ./coverage
       - name: Move coverage to workspace
         run: mv coverage/lcov.info $GITHUB_WORKSPACE/lcov.info  # Move coverage file to workspace directory
+      - name: Check for lcov.info
+        run: ls -la $GITHUB_WORKSPACE
 
   Sonar:
     needs: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Check for lcov.info
+        run: ls -la $GITHUB_WORKSPACE
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
 
   Frontend_Push_Latest_Image:
     if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
