--- a/.github/workflows/frontend-ci-cd.yaml
+++ b/.github/workflows/frontend-ci-cd.yaml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: lcov-report
-          path: coverage/lcov.info
+          path: ./frontend/coverage/lcov.info
 
   Sonar:
     needs: Test
